<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:paddingBottom="@dimen/activity_vertical_margin"
tools:context=".MainActivity"
android:background="@drawable/mainbg">
<Button
    android:id="@+id/bsq"
    android:layout_width="200dp"
    android:layout_height="40dp"
    android:textSize="16sp"
    android:textColor="#ffffff"
    android:background="@drawable/btn_custom"
    android:text="@string/bsq"
    android:layout_marginTop="75dp"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true" />

<Button
    android:id="@+id/btq"
    android:layout_width="200dp"
    android:layout_height="40dp"
    android:textSize="16sp"
    android:textColor="#ffffff"
    android:background="@drawable/btn_custom"
    android:text="@string/btq"
    android:layout_below="@+id/bsq"
    android:layout_alignLeft="@+id/bsq"
    android:layout_alignStart="@+id/bsq"
    android:layout_marginTop="46dp" />

<Button
    android:id="@+id/bcapp"
    android:layout_width="200dp"
    android:layout_height="40dp"
    android:textSize="16sp"
    android:textColor="#ffffff"
    android:background="@drawable/btn_custom"
    android:text="@string/bcapp"
    android:layout_marginTop="46dp"
    android:layout_below="@+id/btq"
    android:layout_centerHorizontal="true" />

<Button
    android:id="@+id/rapp"
    android:layout_width="200dp"
    android:layout_height="40dp"
    android:textSize="16sp"
    android:textColor="#ffffff"
    android:background="@drawable/btn_custom"
    android:text="@string/rapp"
    android:layout_marginTop="46dp"
    android:layout_below="@+id/bcapp"
    android:layout_alignRight="@+id/bcapp"
    android:layout_alignEnd="@+id/bcapp" />


</RelativeLayout>
