<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ques_ll"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100"
    tools:context="com.realnapster.qapp.simple.SimpQ">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="horizontal"
        android:background="@color/cntBg"
        android:gravity="center">
        <TextView
            android:id="@+id/cTv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cnt"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/cTv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cntot"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textSize="16sp"/>
        </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="80">
        <TextView
            android:id="@+id/ques"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ques"
            android:textSize="20sp"
            android:padding="15dp"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView
                android:id="@+id/ans"
                android:padding="15dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="25sp"
                android:text="@string/ans"/>
            </LinearLayout>

        </ScrollView>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center|center_horizontal"
        android:layout_height="0dp"
        android:layout_weight="12"
        android:background="@color/colorAccent">
        <Button
            android:id="@+id/bleft"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@drawable/bleft"/>
        <Button
            android:background="@drawable/bans_press"
            android:id="@+id/banswer"
            android:layout_width="100dp"
            android:layout_height="50dp" />
        <Button
            android:id="@+id/bright"
            android:layout_width="100dp"
            android:background="@drawable/bright"
            android:layout_height="50dp"/>
        </LinearLayout>

</LinearLayout>